--- a/src/app/pages/contracts/list/list.component.html
+++ b/src/app/pages/contracts/list/list.component.html
@@ -58,10 +58,34 @@
                       <span class="input-group-text secondary_bg seconday_clr font-weight-light black_box_2 text-center d-block w-100 brd-r pt-4" id="Num_imei"><span class="font-weight-normal">D</span>ate Contracts</span>
                     </div>
                     <form class="form-inline w-50 pl-2">
-                        <div class="form-group hidden">
-                          <div class="input-group">
+                        <div class="form-group w-100 ">
+                          <div class="input-group w-100">
+                            <input #dpFromDate
+                                   class="form-control" placeholder="yyyy-mm-dd"
+                                   name="dpFromDate"
+                                   [value]="formatter.format(fromDate)"
+                                   (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+                            <div class="input-group-append">
+                              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"><i class="fa fa-calendar-week"></i></button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group mt-sm-2 w-100 mb-0">
+                          <div class="input-group w-100">
+                            <input #dpToDate
+                                   class="form-control" placeholder="yyyy-mm-dd"
+                                   name="dpToDate"
+                                   [value]="formatter.format(toDate)"
+                                   (input)="toDate = validateInput(toDate, dpToDate.value)">
+                            <div class="input-group-append">
+                              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"><i class="fa fa-calendar-week"></i></button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group mt-sm-2 hidden w-100">
+                          <div class="input-group w-100">
                             <input name="datepicker"
-                                   class="form-control"
+                                   class="form-control d-none"
                                    ngbDatepicker
                                    #datepicker="ngbDatepicker"
                                    [autoClose]="'outside'"
@@ -80,30 +104,6 @@
                                 {{ date.day }}
                               </span>
                             </ng-template>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <div class="input-group">
-                            <input #dpFromDate
-                                   class="form-control" placeholder="yyyy-mm-dd"
-                                   name="dpFromDate"
-                                   [value]="formatter.format(fromDate)"
-                                   (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-                            <div class="input-group-append">
-                              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"><i class="fa fa-calendar-week"></i></button>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="form-group mt-3">
-                          <div class="input-group">
-                            <input #dpToDate
-                                   class="form-control" placeholder="yyyy-mm-dd"
-                                   name="dpToDate"
-                                   [value]="formatter.format(toDate)"
-                                   (input)="toDate = validateInput(toDate, dpToDate.value)">
-                            <div class="input-group-append">
-                              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"><i class="fa fa-calendar-week"></i></button>
-                            </div>
                           </div>
                         </div>
                       </form>
@@ -139,7 +139,8 @@
             </div>
         </div>
     </div>
-    <table class="table table-striped">
+    <div class="table-responsive table-shadow mx-auto mx-w96">
+      <table class="table table-striped">
         <thead>
         <tr>
         <th scope="col" class="text-center minw-300 ver-a-m">N°</th>
@@ -190,8 +191,9 @@
         </tr>
         </tbody>
     </table>
+    </div>
       
-      <div class="d-flex justify-content-between p-2">
+      <div class="d-flex justify-content-between p-2 mx-w96 mx-auto">
         <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
         </ngb-pagination>
       
