--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,9 +6,9 @@
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
+        <a [routerLink]="['/home']" class="nav-link">Home</a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
+      <!-- <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
       </li>
       <li class="nav-item dropdown">
@@ -21,7 +21,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Contact</a>
         </div>
-      </li>
+      </li> -->
     </ul>
 
     <!-- SEARCH FORM -->
@@ -124,10 +124,11 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#"><i
-            class="fas fa-th-large"></i></a>
+        <a class="nav-link" data-widget="control-sidebar" data-slide="true" *ngIf="isAuthenticated" (click)="logout()" data-toggle="tooltip" data-placement="left" title="se deconnecter"><i
+            class="fas fa-sign-out-alt"></i></a>
       </li>
     </ul>
+    
   </nav>
   <!-- /.navbar -->
 
