--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
           <img src="../assets/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a [routerLink]="['/home']" class="d-block">TouTelect_Admin <span class="badge badge-secondary">Admin</span></a>
         </div>
       </div>
 
@@ -25,7 +25,7 @@
                <!-- Forfaits -->
                <li class="nav-item has-treeview">
                 <a class="nav-link pointeur">
-                  <i class="nav-icon fas fa-edit"></i>
+                  <i class="nav-icon fas fa-folder-plus"></i>
                   <p>
                     Forfaits
                     <i class="fas fa-angle-left right"></i>
@@ -34,19 +34,19 @@
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
                     <a [routerLink]="['/forfaits/list']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-info"></i>
+                      <i class="far fa-folder nav-icon text-info"></i>
                       <p>List</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a [routerLink]="['/forfaits/new']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-warning"></i>
+                      <i class="far fa-folder nav-icon text-warning"></i>
                       <p>Nouveaux</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a [routerLink]="['/forfaits/archive']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-danger"></i>
+                      <i class="far fa-folder nav-icon text-danger"></i>
                       <p>Archive</p>
                     </a>
                   </li>
@@ -56,7 +56,7 @@
               <!-- Contrats -->
               <li class="nav-item has-treeview">
                 <a class="nav-link pointeur">
-                  <i class="nav-icon fas fa-copy"></i>
+                  <i class="nav-icon fas fa-folder-plus"></i>
                   <p>
                     Contrats
                     <i class="fas fa-angle-left right"></i>
@@ -65,19 +65,19 @@
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
                     <a [routerLink]="['/contracts/list']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-info"></i>
+                      <i class="far fa-folder nav-icon text-info"></i>
                       <p>List</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a [routerLink]="['/contracts/new']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-warning"></i>
+                      <i class="far fa-folder nav-icon text-warning"></i>
                       <p>Nouveaux</p>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a [routerLink]="['/contracts/archive']" class="nav-link">
-                      <i class="far fa-circle nav-icon text-danger"></i>
+                      <i class="far fa-folder nav-icon text-danger"></i>
                       <p>Archive</p>
                     </a>
                   </li>
@@ -86,7 +86,7 @@
               
           <li class="nav-item">
             <a [routerLink]="['/clients/list']" class="nav-link">
-              <i class="nav-icon fas fa-users"></i>
+              <i class="nav-icon fas fa-folder"></i>
               <p>
                 Clients
               </p>
